--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Index</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="app.js"></script>
 	<script>
@@ -35,6 +35,15 @@
 </head>
 
 <body oncontextmenu="return false;">
+	<header>
+		<div class="navbar">
+			<ul>
+				<li><a href="blogs.html">Blogs</a></li>
+				<li><a href="twitter.html">Twitter Archives</a></li>
+				<li><a href="krishna.html">Hare Krishna</a></li>
+			</ul>
+		</div>
+	</header>
 	<h1>HTML FORM</h1>
 
 	Hare Krishna
