--- a/blogs.html
+++ b/blogs.html
@@ -10,6 +10,7 @@
 
 <body>
     <h4>Welcome to my blogs</h4>
+    <article>Hare Krishna Hare Krishna Krishna Krishna Hare Hare Hare Ram Hare Ram Ram Ram Hare Hare</article>
 </body>
 
 </html>
