--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			Password- 123456789<br>
 		</p>
 	</h4>
-	<button><a href="article.html">Click on me to go the article page!</a></button>
+	<button class="btnc"><a href="article.html">Click on me to go the article page!</a></button>
 </body>
 
 </html>
