--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 		</p>
 	</h4>
 	<button class="btnc"><a href="article.html">Click on me to go the article page!</a></button>
+
+	<!-- <form action="#">
+		<select name="color">
+			<option value="red">Red</option>
+		</select>
+	</form> -->
+	<article>Jai Shree Krishna</article>
+
 </body>
 
 </html>
