Added few files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Index</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="app.js"></script>
-	<script>
+	<!-- <script>
 
 		document.onkeydown = function (e) {
 			if (event.keyCode == 123) {
@@ -30,11 +30,13 @@
 				return false;
 			}
 		}
-	</script>
+	</script> -->
 
 </head>
 
-<body oncontextmenu="return false;">
+<!-- <body oncontextmenu="return false;"> -->
+
+<body>
 	<header>
 		<div class="navbar">
 			<ul>
